# stackelberg-ml

./: .gitignore  README.md  ablation-mal-tab.py  ablation-mal.py  ablation-mal2.py  ablation-pal.py  environment.yml  graph.ipynb  literature_comparison.ipynb  meanstd.py  pyproject.toml  pytuna-mal-tab.py  pytuna-mal.py  todo.md  train.py  train_ppo.py
algos/: batch_reinforce.py  model_based_npg.py  npg_cg.py
envs/: __init__.py  env_util.py  learned_env.py  simple_mdp.py
models/: batch_reinforce.py  gaussian_mlp.py  mlp_baseline.py  model_based_npg.py  nn_dynamics.py  npg_cg.py  random_dynamics.py
nn/: mlp.py
nn/baseline/: baselines.py
nn/model/: dynamics_nets.py  reward_nets.py  training_util.py  world_models.py
nn/policy/: mlp_baseline.py  policy_networks.py  stable_baseline_policy_networks.py
policies/: contextualized_policy.py  policy.py  stable_baseline_policy.py
stackelberg_mbrl/: train.py  train_mal.py  train_pal.py  train_ppo.py  train_sgd.py  utils.py
stackelberg_mbrl/algos/: batch_reinforce.py  model_based_npg.py  npg_cg.py  tabular.py
stackelberg_mbrl/envs/: env_util.py  learned_env.py  querying_env.py  simple_mdp.py
stackelberg_mbrl/experiments/: experiment_config.py
stackelberg_mbrl/nn/: mlp.py
stackelberg_mbrl/policies/: contextualized_policy.py  policy.py  random_policy.py  stable_baseline_policy.py
stackelberg_mbrl/util/: logger.py  trajectories.py
stackerlberg/train/: run_experiment.py
test/logs/: log.csv  log.pickle
util/: optimization.py  optimize_model.py  sampling.py  sampling_core.py  tensor_util.py  trajectories.py
(+530 files in other folders)
